--- a/TODOApplication/app/src/main/res/layout/activity_home.xml
+++ b/TODOApplication/app/src/main/res/layout/activity_home.xml
@@ -43,6 +43,6 @@
         android:layout_marginEnd="@dimen/fab_margin"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@android:drawable/ic_input_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
