--- a/TODOApplication/app/src/main/res/layout/content_scrolling.xml
+++ b/TODOApplication/app/src/main/res/layout/content_scrolling.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".view.HomeActivity"
+    tools:context=".view.home.HomeActivity"
     tools:showIn="@layout/activity_home">
 
     <TextView
@@ -13,5 +13,15 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:text="@string/large_text" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/todo_list_rc"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.core.widget.NestedScrollView>
